--- a/Clasificador_Medico.ipynb
+++ b/Clasificador_Medico.ipynb
@@ -669,7 +669,7 @@
         "display(df_new.head(10))\n",
         "\n",
         "# (Optional) Save the updated DataFrame to a new CSV file\n",
-        "df_new.to_csv('predictions_values.csv', index=False)\n",
+        "df_new.to_csv('predictions_values.csv', index=False, sep=';')\n",
         "print(\"\\nDataFrame actualizado guardado en 'predictions_values.csv'\")\n",
         "try:\n",
         "  files.download('predictions_values.csv')\n",
